# Create the node application
# add_executable(neo_node_exec main.cpp)  # Commented out due to compilation errors

# Include directories
# target_include_directories(neo_node_exec
#     PRIVATE
#         ${CMAKE_SOURCE_DIR}/include
# )

# Link dependencies
# target_link_libraries(neo_node_exec
#     PRIVATE
#         neo_cpp
# )

# Install targets
# install(TARGETS neo_node_exec
#     RUNTIME DESTINATION bin
# )
